2017-11-03  Marc Glisse  <marc.glisse@inria.fr>

	* gcc.dg/tree-ssa/negneg-1.c: New file.
	* gcc.dg/tree-ssa/negneg-2.c: Likewise.
	* gcc.dg/tree-ssa/negneg-3.c: Likewise.
	* gcc.dg/tree-ssa/negneg-4.c: Likewise.

2017-11-03  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/no-strict-overflow-3.c (foo): Update magic
	value to not clash with frequency.
	* gcc.dg/strict-overflow-3.c (foo): Likewise.
	* gcc.dg/tree-ssa/builtin-sprintf-2.c: Update template.
	* gcc.dg/tree-ssa/dump-2.c: Update template.
	* gcc.dg/tree-ssa/ifc-10.c: Update template.
	* gcc.dg/tree-ssa/ifc-11.c: Update template.
	* gcc.dg/tree-ssa/ifc-12.c: Update template.
	* gcc.dg/tree-ssa/ifc-20040816-1.c: Update template.
	* gcc.dg/tree-ssa/ifc-20040816-2.c: Update template.
	* gcc.dg/tree-ssa/ifc-5.c: Update template.
	* gcc.dg/tree-ssa/ifc-8.c: Update template.
	* gcc.dg/tree-ssa/ifc-9.c: Update template.
	* gcc.dg/tree-ssa/ifc-cd.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr56541.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr68583.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr69489-1.c: Update template.
	* gcc.dg/tree-ssa/ifc-pr69489-2.c: Update template.
	* gcc.target/i386/pr61403.c: Update template.

2017-11-03  Nathan Sidwell  <nathan@acm.org>

	* lib/scanlang.exp: Fix error message to refer to scan-lang-dump.

	PR c++/82710
	* g++.dg/warn/pr82710.C: More cases.

2017-11-03  Richard Sandiford  <richard.sandiford@linaro.org>

	* gcc.dg/pr82809.c: New test.

2017-11-02  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/81957
	* g++.dg/cpp0x/variadic-crash5.C: New.

2017-11-02  Steve Ellcey  <sellcey@cavium.com>

	PR target/79868
	* gcc.target/aarch64/spellcheck_1.c: Update dg-error string to match
	new format.
	* gcc.target/aarch64/spellcheck_2.c: Ditto.
	* gcc.target/aarch64/spellcheck_3.c: Ditto.
	* gcc.target/aarch64/target_attr_11.c: Ditto.
	* gcc.target/aarch64/target_attr_12.c: Ditto.
	* gcc.target/aarch64/target_attr_17.c: Ditto.

2017-11-02  Nathan Sidwell  <nathan@acm.org>

	PR c++/82710